# VanillaForge

./: .env_example  .gitignore  LICENSE  README.md  agents-cli-manifest.yaml  count.py  pyproject.toml
app/: agent.py  config.py  skill_loader.py  state.py
dashboard_backend/: main.py
dashboard_frontend/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard_frontend/src/: App.jsx  index.css  main.jsx
dashboard_frontend/src/components/: ChartPanel.jsx  ChatPanel.jsx  CompanyInfoPanel.jsx  JournalPanel.jsx  NewsSentimentPanel.jsx  OptionPricerPanel.jsx
dashboard_frontend/src/hooks/: A2UIContext.jsx
evals/: eval_cases.json
mcp_servers/memory_trade_sentiment/: server.py
scripts/: ingest_pdfs.py
skills/company_information_skill/: SKILL.md
skills/company_information_skill/scripts/: fetch_profile.py
skills/data_skill/: SKILL.md
skills/data_skill/scripts/: market_data_fetcher.py
skills/documentation_skill/: SKILL.md
skills/documentation_skill/scripts/: rag_search.py
skills/news_sentiment_skill/: SKILL.md
skills/news_sentiment_skill/scripts/: news_fetcher.py
skills/pricing_skill/: SKILL.md
skills/pricing_skill/scripts/: bsm_calculator.py
tests/: test_agent_flow.py  test_env_config.py  test_skills.py
